--- a/src/sass/flx/_who-we-are.scss
+++ b/src/sass/flx/_who-we-are.scss
@@ -78,7 +78,7 @@
             column-gap: var(--gutter-large);
         }
 
-        .inner {
+        .contain-inner {
             padding-top: 2.25rem;
             border-top: 1.5px solid var(--mid-black);
 
@@ -91,7 +91,7 @@
         }
 
         &:last-of-type {
-            .inner {
+            .contain-inner {
                 border: none;
             }
         }
@@ -227,13 +227,13 @@
     .image-offset {
         margin-bottom: var(--drop-large);
 
-        .inner {
+        .grid-offset {
             display: grid;
             grid-template-columns: 1fr;
         }
 
         @media (min-width: 880px) {
-            .inner {
+            .grid-offset {
                 grid-template-columns: repeat(12, 1fr);
                 grid-template-rows: repeat(9, 108px);
                 column-gap: var(--gutter-large);
