--- a/src/sass/flx/_home.scss
+++ b/src/sass/flx/_home.scss
@@ -101,6 +101,11 @@ Note: A lot of styles eg grid-columns are output as inline styles via ACF and ch
     }
 
     // specific row stylings
+    .two-cols {
+        video {
+            width: 100%;
+        }
+    }
 
     /* three col layout ------------------------------------------------------------ */
     .three-cols {
