--- a/src/sass/post-types/work.scss
+++ b/src/sass/post-types/work.scss
@@ -219,6 +219,10 @@
         column-gap: var(--gutter-large);
     }
 
+    .rich-text {
+        padding-bottom: 4.5rem;
+    }
+
     .title {
         grid-column: 1 / 7;
         grid-row: 1;
