Homepage flexible content blocks: video added to single-col

--- a/src/sass/flx/_home.scss
+++ b/src/sass/flx/_home.scss
@@ -101,6 +101,7 @@ Note: A lot of styles eg grid-columns are output as inline styles via ACF and ch
     }
 
     // specific row stylings
+    .single-col,
     .two-cols {
         video {
             width: 100%;
