--- a/src/sass/flx/_home.scss
+++ b/src/sass/flx/_home.scss
@@ -70,6 +70,21 @@ Note: A lot of styles eg grid-columns are output as inline styles via ACF and ch
         }
     }
 
+    blockquote {
+        position: relative;
+    }
+
+    blockquote:after {
+        position: relative;
+        margin-top: 1.25rem;
+        margin-bottom: 0.75rem;
+        width: 176px;
+        height: 1.5px;
+        display: block;
+        content: '';
+        background-color: var(--white);
+    }
+
     .details {
         display: flex;
         flex-direction: column;
@@ -77,17 +92,19 @@ Note: A lot of styles eg grid-columns are output as inline styles via ACF and ch
 
     .client {
         margin-right: 77px;
-        margin-bottom: 0.5rem;
-        font-family: var(--copy);
+        font-family: var(--copy-med);
         font-size: var(--font-base-plus);
         line-height: var(--lh-medium);
         color: var(--white);
     }
 
+    .position,
     .category {
+        margin-bottom: 1.5rem;
+        display: block;
         font-family: var(--copy);
         font-size: var(--font-base-plus);
-        text-transform: uppercase;
+        //text-transform: uppercase;
         line-height: var(--lh-small);
         color: var(--work-meta);
     }
@@ -103,9 +120,27 @@ Note: A lot of styles eg grid-columns are output as inline styles via ACF and ch
     // specific row stylings
     .single-col,
     .two-cols {
+        .quote {
+            align-self: start;
+        }
+
         video {
             width: 100%;
         }
+    }
+
+    .single-col {
+        .details {
+            grid-column: 1 / 9;
+
+            @media (min-width: 880px) {
+                grid-column: 1 / 7;
+            }
+        }
+    }
+
+    .two-cols {
+        align-items: end;
     }
 
     /* three col layout ------------------------------------------------------------ */
@@ -118,7 +153,7 @@ Note: A lot of styles eg grid-columns are output as inline styles via ACF and ch
             grid-row: 1 / -1;
 
             @media (min-width: 960px) {
-                grid-column: 1 / 6;
+                grid-column: 1 / 7;
             }
 
             .details {
@@ -140,12 +175,12 @@ Note: A lot of styles eg grid-columns are output as inline styles via ACF and ch
         }
 
         .col-2 {
-            padding-top: var(--offset-medium);
+            //padding-top: var(--offset-medium);
             grid-column: 7 / 13;
             grid-row: 1 / -1;
 
             @media (min-width: 960px) {
-                grid-column: 5 / 10;
+                grid-column: 5 / 11;
             }
         }
 
