Work: drop reduced from 10rem to 9rem on bespoke rows

--- a/src/sass/tools/_utilities.scss
+++ b/src/sass/tools/_utilities.scss
@@ -10,7 +10,7 @@
     grid-template-columns: 1fr;
 
     @media (min-width: 960px) {
-        margin-bottom: var(--drop-big);
+        margin-bottom: 9rem;
         grid-template-columns: repeat(12, 1fr);
         grid-column-gap: var(--gutter-large);
     }
