What we do: temporary container__grid class added

--- a/src/sass/flx/_what-we-do.scss
+++ b/src/sass/flx/_what-we-do.scss
@@ -33,13 +33,13 @@
             color: var(--mid-black);
         }
 
-        .container {
+        .container__grid {
             display: grid;
         }
 
         // layout media queries --------------------------------------------------
         @media (min-width: 880px) {
-            .container {
+            .container__grid {
                 grid-template-columns: repeat(12, 1fr);
                 grid-gap: 48px;
             }
