Team Member [overlay] : Favourite projects calls added, overlay styled and re-factored

--- a/src/sass/layout/_layout.scss
+++ b/src/sass/layout/_layout.scss
@@ -1,7 +1,8 @@
 /* layout
 ----------------------------------------------------------------------------- */
 
-.home {
+.home,
+.single-bbwp_cpt_team {
     main {
         background: var(--black);
     }
