--- a/src/sass/post-types/team.scss
+++ b/src/sass/post-types/team.scss
@@ -5,6 +5,7 @@
 
     .team-member {
         width: 100%;
+        height: 100vh;
         padding-top: 3.75rem;
         padding-bottom: 3.75rem;
 
