--- a/src/sass/page-sections/_banner.scss
+++ b/src/sass/page-sections/_banner.scss
@@ -1,7 +1,7 @@
 /* banner
 ----------------------------------------------------------------------------- */
 .banner-home {
-    // position: fixed;
+    position: relative;
     width: 100%;
     padding-top: 4rem;
     padding-bottom: 5rem;
