--- a/src/sass/post-types/team.scss
+++ b/src/sass/post-types/team.scss
@@ -1,115 +1,128 @@
 /* team-member: scss for individual team member overlay
 ----------------------------------------------------------------------------- */
-.single-bbwp_cpt_team {
-    padding-top: 0;
+// .single-bbwp_cpt_team {
+//     padding-top: 0;
 
-    .team-member {
-        width: 100%;
-        height: 100vh;
-        padding-top: 3.75rem;
-        padding-bottom: 3.75rem;
+.team-member__overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    padding-top: 3.75rem;
+    padding-bottom: 3.75rem;
 
-        background-color: var(--black);
-        color: var(--white);
+    opacity: 0;
+    visibility: hidden;
 
-        .profile-top {
-            margin-bottom: 10rem;
+    background-color: var(--black);
+    color: var(--white);
+
+    z-index: 1000;
+
+    .profile-top {
+        margin-bottom: 10rem;
+        display: flex;
+        justify-content: flex-end;
+
+        button {
+            position: relative;
+            width: 24px;
+            height: 24px;
+            border: 1.5px solid var(--white);
+            border-radius: 50%;
             display: flex;
-            justify-content: flex-end;
-
-            button {
-                position: relative;
-                width: 24px;
-                height: 24px;
-                border: 1.5px solid var(--white);
-                border-radius: 50%;
-                display: flex;
-                justify-content: center;
-            }
-
-            button:before,
-            button:after {
-                position: absolute;
-                width: 14px;
-                height: 1px;
-                content: '';
-                background-color: var(--white);
-            }
-
-            button:after {
-                transform: rotate(90deg);
-            }
+            justify-content: center;
         }
 
-        .profile,
-        .project {
-            display: grid;
-            grid-template-columns: 1fr;
-
-            @media (min-width: 880px) {
-                grid-template-columns: repeat(12, 1fr);
-                grid-column-gap: var(--gutter-large);
-            }
+        button:before,
+        button:after {
+            position: absolute;
+            width: 14px;
+            height: 1px;
+            content: '';
+            background-color: var(--white);
         }
 
-        figure {
-            grid-column: span 4;
-        }
-
-        .description,
-        .project-info {
-            grid-column: span 5;
-        }
-
-        .team-member-name,
-        .project-title {
-            font-family: var(--copy-med);
-            font-size: var(--font-base-plus);
-            font-weight: 500;
-            line-height: var(--lh-base);
-        }
-
-        span,
-        a {
-            display: block;
-        }
-
-        .role,
-        .category {
-            margin-bottom: 1.25rem;
-            font-size: var(--font-base-plus);
-            color: #c7c7c7;
-        }
-
-        p {
-            margin-bottom: 1.5rem;
-            font-size: var(--font-base-plus);
-            color: var(--font-base-plus);
-        }
-
-        p:last-of-type {
-            margin-bottom: 1.25rem;
-        }
-
-        .linkedin,
-        .link {
-            font-size: var(--font-small);
-            text-transform: uppercase;
-            color: var(--white);
-        }
-
-        // div.profile
-        .image {
-            margin-bottom: 74px;
-        }
-
-        // div.project
-        .favourite {
-            margin-bottom: 0.75rem;
-            font-family: var(--copy-med);
-            font-size: var(--font-base-plus);
-            text-transform: uppercase;
-            color: #c7c7c7;
+        button:after {
+            transform: rotate(90deg);
         }
     }
+
+    .profile,
+    .project {
+        display: grid;
+        grid-template-columns: 1fr;
+
+        @media (min-width: 880px) {
+            grid-template-columns: repeat(12, 1fr);
+            grid-column-gap: var(--gutter-large);
+        }
+    }
+
+    figure {
+        grid-column: span 4;
+    }
+
+    .description,
+    .project-info {
+        grid-column: span 5;
+    }
+
+    .team-member-name,
+    .project-title {
+        font-family: var(--copy-med);
+        font-size: var(--font-base-plus);
+        font-weight: 500;
+        line-height: var(--lh-base);
+    }
+
+    span,
+    a {
+        display: block;
+    }
+
+    .role,
+    .category {
+        margin-bottom: 1.25rem;
+        font-size: var(--font-base-plus);
+        color: #c7c7c7;
+    }
+
+    p {
+        margin-bottom: 1.5rem;
+        font-size: var(--font-base-plus);
+        color: var(--font-base-plus);
+    }
+
+    p:last-of-type {
+        margin-bottom: 1.25rem;
+    }
+
+    .linkedin,
+    .link {
+        font-size: var(--font-small);
+        text-transform: uppercase;
+        color: var(--white);
+    }
+
+    // div.profile
+    .image {
+        margin-bottom: 74px;
+    }
+
+    // div.project
+    .favourite {
+        margin-bottom: 0.75rem;
+        font-family: var(--copy-med);
+        font-size: var(--font-base-plus);
+        text-transform: uppercase;
+        color: #c7c7c7;
+    }
 }
+
+.show-modal {
+    opacity: 1;
+    visibility: visible;
+}
+// }
