Work: JS [toggle visibility] added to filter button

--- a/src/sass/post-types/work.scss
+++ b/src/sass/post-types/work.scss
@@ -115,6 +115,10 @@
             margin-bottom: var(--drop-large);
             font-family: var(--titling);
             font-size: var(--font-medium);
+
+            p {
+                margin-bottom: var(--drop-medium);
+            }
         }
 
         .details {
