--- a/src/sass/tools/_reset.scss
+++ b/src/sass/tools/_reset.scss
@@ -53,14 +53,14 @@ li {
 button,
 textarea,
 select {
-    font: inherit;
+    //font: inherit;
 }
 
 button {
     padding: 0;
     border: none;
     outline: none;
-    align-items: center;
+    //align-items: center;
     text-decoration: none;
     cursor: pointer;
     background: transparent;
