--- a/src/sass/flx/_work-v1.0.scss
+++ b/src/sass/flx/_work-v1.0.scss
@@ -2,26 +2,40 @@
                   : this also defines the bespoke grids for featured work
 ---------------------------------------------------------------------------------------------------------------------- */
 .our-work {
-    .filters-container {
-        button {
-            display: block;
-        }
-    }
-
     .filters {
         margin-bottom: 4rem;
         display: grid;
         grid-template-columns: 1fr;
+        grid-template-rows: auto;
 
         .services-filter,
         .sectors-filter {
+            margin-top: 2rem;
             grid-column: 1;
-            transform: translateX(-32px);
+
+            display: none;
+
+            &.show-filter {
+                display: block;
+            }
         }
 
         @media (min-width: 880px) {
             grid-template-columns: repeat(12, 1fr);
             grid-column-gap: var(--gutter-large);
+
+            button {
+                padding: 0;
+                margin: 0;
+                display: block;
+                grid-column: 9;
+
+                font-family: var(--copy-med);
+                font-size: var(--font-small);
+                font-weight: 500;
+                text-transform: uppercase;
+                text-align: left;
+            }
 
             .services-filter,
             .sectors-filter {
@@ -30,17 +44,12 @@
 
             .sectors-filter {
                 grid-column: 9 / 12;
-                grid-row: 1;
+                grid-row: 2;
             }
             .services-filter {
                 grid-column: 11 / -1;
-                grid-row: 1;
+                grid-row: 2;
             }
-        }
-
-        button {
-            grid-column: 1 / -1;
-            grid-row: 1;
         }
 
         h3 {
