--- a/src/sass/post-types/team.scss
+++ b/src/sass/post-types/team.scss
@@ -4,11 +4,12 @@
 //     padding-top: 0;
 
 .team-member__overlay {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    max-height: 100%;
+    min-height: 100vh;
     padding-top: 3.75rem;
     padding-bottom: 3.75rem;
 
