--- a/src/sass/flx/_who-we-are.scss
+++ b/src/sass/flx/_who-we-are.scss
@@ -414,4 +414,54 @@
             }
         }
     }
+
+    /* team-members
+    ------------------------------------------------------------------------- */
+
+    .awards-overlay {
+        position: fixed;
+        top: 0;
+        left: 0;
+
+        width: 100vw;
+        max-height: 100%;
+        min-height: 100vh;
+
+        padding-top: 9.5rem;
+        padding-bottom: 14.25rem;
+        display: grid;
+
+        opacity: 0;
+        visibility: hidden;
+
+        background-color: var(--black);
+
+        .awards-inner {
+            display: grid;
+            grid-template-columns: repeat(12, 1fr);
+            column-gap: var(--gutter-large);
+        }
+
+        .awards {
+            grid-column: 1 / 7;
+        }
+
+        li {
+            padding: 0.75rem 0;
+            border-bottom: 1.5px solid var(--white);
+            display: flex;
+            justify-content: space-between;
+            font-size: 2rem;
+            color: var(--white);
+        }
+
+        li:first-of-type {
+            border-top: 1.5px solid var(--white);
+        }
+    }
+
+    .show-awards {
+        opacity: 1;
+        visibility: visible;
+    }
 }
