Who we are: Team member overlay close button inner icon re-positioned

--- a/src/sass/post-types/team.scss
+++ b/src/sass/post-types/team.scss
@@ -39,6 +39,7 @@
         button:before,
         button:after {
             position: absolute;
+            top: 50%;
             width: 14px;
             height: 1px;
             content: '';
