--- a/src/sass/flx/_who-we-are.scss
+++ b/src/sass/flx/_who-we-are.scss
@@ -415,7 +415,7 @@
         }
     }
 
-    /* team-members
+    /* awards overlay
     ------------------------------------------------------------------------- */
 
     .awards-overlay {
