--- a/src/sass/partials/_header.scss
+++ b/src/sass/partials/_header.scss
@@ -5,49 +5,62 @@ header {
     top: 0;
     width: 100%;
     height: 96px;
-    padding: 1.25rem 1.5rem;
+    // padding: 1.25rem 1.5rem;
+    padding: 1.25rem 0;
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
-    align-items: center;
+    //align-items: center;
     background-color: var(--off-white);
     z-index: 100;
 
-    .bb-logo {
-        width: 112px;
+    .header-top {
+        width: 100%;
+        padding-left: 1.5rem;
+        display: flex;
+        justify-content: space-between;
 
-        svg {
-            max-width: 100%;
-        }
-    }
-
-    .navicon {
-        position: relative;
-        width: 32px;
-        height: 32px;
-        border: 1.5px solid var(--black);
-        border-radius: 50%;
-        margin-left: 1rem;
-        background-color: transparent;
-        transform: translateY(0px);
-
-        &:before,
-        &:after {
-            position: absolute;
-            top: 50%;
-            left: 50%;
+        .bb-logo {
+            width: 112px;
+            height: auto;
             display: block;
-            width: 16px;
-            height: 1px;
-            content: '';
-            background-color: var(--black);
+
+            svg {
+                max-width: 100%;
+            }
         }
 
-        &:before {
-            transform: translateX(-50%);
-        }
+        .navicon {
+            position: relative;
+            // top: 0;
+            right: 1.5rem;
+            width: 32px;
+            height: 32px;
+            border: 1.5px solid var(--black);
+            border-radius: 50%;
+            margin-left: 1rem;
+            background-color: transparent;
+            transform: translateY(0px);
 
-        &:after {
-            transform: translateX(-50%) rotate(90deg);
+            &:before,
+            &:after {
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                display: block;
+                width: 16px;
+                height: 1px;
+                content: '';
+                background-color: var(--black);
+            }
+
+            &:before {
+                transform: translateX(-50%);
+            }
+
+            &:after {
+                transform: translateX(-50%) rotate(90deg);
+            }
         }
     }
 }
