--- a/src/sass/site-furniture/_navigation.scss
+++ b/src/sass/site-furniture/_navigation.scss
@@ -1,20 +1,35 @@
 /* navigation
 ----------------------------------------------------------------------------- */
 .navigation {
-    display: flex;
-    align-items: center;
+    // display: flex;
+    // flex-direction: column;
+
+    @media (min-width: 880px) {
+        // margin-right: 120px;
+        // flex-direction: row;
+        // align-items: center;
+    }
 }
 
 .primary-nav {
-    //margin-bottom: 6px;
+    // padding-top: 10rem;
+    // margin-bottom: 6px;
+    // padding-right: 4rem;
+
+    min-height: 100vh;
     display: none;
+    background-color: var(--off-white);
 
     &.show-nav {
-        display: flex;
+        width: 100%;
+        height: 10rem;
+        padding-right: 1.5rem;
+        display: block;
     }
 
     li {
-        margin-left: 3rem;
+        // margin-left: 3rem;
+        text-align: right;
 
         &:first-of-type {
             margin-left: 0;
