--- a/src/sass/partials/_header.scss
+++ b/src/sass/partials/_header.scss
@@ -14,6 +14,10 @@ header {
     background-color: var(--off-white);
     z-index: 100;
 
+    @media (min-width: 880px) {
+        flex-direction: row;
+    }
+
     .header-top {
         width: 100%;
         padding-left: 1.5rem;
@@ -31,7 +35,7 @@ header {
         }
 
         .navicon {
-            position: relative;
+            position: absolute;
             // top: 0;
             right: 1.5rem;
             width: 32px;
