--- a/src/sass/site-furniture/_navigation.scss
+++ b/src/sass/site-furniture/_navigation.scss
@@ -25,6 +25,15 @@
         height: 10rem;
         padding-right: 1.5rem;
         display: block;
+
+        @media (min-width: 880px) {
+            width: 390px;
+            min-height: auto;
+            margin-right: 96px;
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+        }
     }
 
     li {
