Newsroom: Adjustments to clamp on titles, mobile specific drops added to .meta

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -95,6 +95,10 @@
     --drop-large: 6rem;
     --drop-big: 10rem;
 
+    --mb-drop-small: 0.75rem;
+    --mb-drop-base: 1rem;
+    --mb-drop-medium: 1.5rem;
+
     /* Effects
     --------------------------------------------------------------------------------------------------------------- */
 
