Newsroom: drop added to figure at 320px

--- a/src/sass/page-sections/_get-in-touch.scss
+++ b/src/sass/page-sections/_get-in-touch.scss
@@ -21,6 +21,10 @@
         }
     }
 
+    .image {
+        margin-bottom: var(--mb-drop-medium);
+    }
+
     // layout: media queries --------------------------------------------------
     @media (min-width: 800px) {
         .container {
